# VDeH_Datenbestand

./: .gitignore  CHANGELOG_LOC_INTEGRATION.md  CHANGELOG_MARC21.md  MIGRATION_PLAN_MARC21.md  README.md  config.yaml  paper_statistics.json  pyproject.toml  setup.py
docs/: METHODIK.md  PROJECT_STRUCTURE.md  dnb_enhanced_search_implementation.md  isbn_cleanup_implementation.md  multi_source_fusion_plan.md  pages_validation_implementation.md  report_generator_update_plan.md  title_year_implementation.md
docs/paper/: VDEH_Bestandsanalyse.md
notebooks/: template.ipynb  template_new.ipynb
notebooks/.jupyter/: notebook_config.json
notebooks/01_vdeh_preprocessing/: 01_vdeh_data_loading.ipynb  02_vdeh_data_preprocessing.ipynb  03_vdeh_language_detection.ipynb  04_vdeh_data_enrichment.ipynb  04b_vdeh_loc_enrichment.ipynb  04b_vdeh_loc_enrichment_output.ipynb  05_vdeh_data_fusion.ipynb  05_vdeh_data_fusion_output.ipynb  05_vdeh_dnb_loc_fusion.ipynb
notebooks/02_ub_comparision/: 02_vdeh_ub_collection_check.ipynb
notebooks/02_ub_preprocessing/: 01_ub_data_loading.ipynb
notebooks/02_vdeh_analysis/: 01_project_report_generator.ipynb  (+5 more)
reports/: README.md  run_report_paper.py
scripts/: README.md  README_ISBN_FIX.md  compare_dnb_strategies.py  fix_isbn_corruption.py  generate_paper_figures.py  generate_paper_stats.py  test_dnb_enhanced_search.py  test_enrichment_logic.py  test_fusion_engine.py  test_isbn_cleanup.py  test_isbn_fusion.py  test_pages_validation.py  test_real_fusion.py  test_ty_similarity_filter.py
src/: config_loader.py  dnb_api.py  loc_api.py
(+58 files in other folders)
