[tool.poetry]
name = "bibo-analysis"
version = "0.1.0"
description = "Bibliotheksbestand-Analyse und Vergleich"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
papermill = "^2.4.0"
ipykernel = "^6.0.0"
pyyaml = "^6.0.0"
lxml = "^6.0.2"
pyarrow = "^22.0.0"
pymarc = "^5.3.1"
requests = "^2.31.0"
tqdm = "^4.66.0"
ollama = "^0.3.0"
ipython = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3